--- a/.env
+++ b/.env
@@ -31,3 +31,7 @@ APP_SECRET=07405a1bdb92eb85c11395e670a50b25
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
 DATABASE_URL=mysql://root:root@127.0.0.1:3306/symreact?serverVersion=5.7
 ###< doctrine/doctrine-bundle ###
+
+###> nelmio/cors-bundle ###
+CORS_ALLOW_ORIGIN=^https?://(localhost|127\.0\.0\.1)(:[0-9]+)?$
+###< nelmio/cors-bundle ###
