Modification sur le cycle de vie de la requete et extension doctrine

--- a/config/services.yaml
+++ b/config/services.yaml
@@ -27,3 +27,6 @@ services:
     # please note that last definitions always *replace* previous ones
     # App\Serializer\patchedDateTimeNormalizer:
         # tags: [serializer.normalizer]
+    App\Events\JwtCreatedSubcriber:
+        tags:
+        - {name: kernel.event_listener,event: lexik_jwt_authentication.on_jwt_created, method: updateJwtData}  
