Installation de React et gestion des customers et invoices

--- a/config/packages/api_platform.yaml
+++ b/config/packages/api_platform.yaml
@@ -4,9 +4,10 @@ api_platform:
     collection:
         pagination:
             enabled: false
-            items_per_page: 5  
+            items_per_page: 2
             client_enabled: true
             client_items_per_page: true
+            items_per_page_parameter_name: itemsPerPage
     patch_formats:
         json: ['application/merge-patch+json']
 
