--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "devDependencies": {
-        "@babel/preset-react": "7.0.0",
+        "@babel/preset-react": "^7.0.0",
         "@symfony/webpack-encore": "^0.30.0",
         "core-js": "^3.0.0",
         "eslint": "^7.0.0",
@@ -17,6 +17,7 @@
     },
     "dependencies": {
         "axios": "^0.18.0",
+        "jwt-decode": "^2.2.0",
         "moment": "^2.25.3",
         "react": "^16.8.6",
         "react-dom": "^16.8.6",
