--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "moment": "^2.25.3",
         "react": "^16.8.6",
         "react-dom": "^16.8.6",
-        "react-router-dom": "^5.0.0"
+        "react-router-dom": "^5.0.0",
+        "react-select": "^3.1.0"
     }
 }
